testsuite/tests/typing-objects-bugs/pr4018_bad.compilers.reference
File "pr4018_bad.ml", line 42, characters 11-17:
42 | let f (x : entity entity_container) = ()
                ^^^^^^
Error: This type entity = < destroy_subject : id subject; entity_id : id >
       should be an instance of type
         < destroy_subject : < add_observer : 'a entity_container -> 'c; .. >
                             as 'b;
           .. >
         as 'a
       Type
         id subject =
           < add_observer : (id subject, id) observer -> unit;
             notify_observers : id -> unit >
       is not compatible with type
         < add_observer : 'a entity_container -> 'c; .. > as 'b 
       Type (id subject, id) observer = < notify : id subject -> id -> unit >
       is not compatible with type
         'a entity_container =
           < add_entity : (< destroy_subject : < add_observer : 'a
                                                                entity_container ->
                                                                'f;
                                                 .. >
                                               as 'e;
                             .. >
                           as 'd) ->
                          'f;
             notify : 'd -> id -> unit > 
       Type entity = < destroy_subject : id subject; entity_id : id >
       is not compatible with type < destroy_subject : 'e; .. > as 'd 
       Type
         id subject =
           < add_observer : (id subject, id) observer -> unit;
             notify_observers : id -> unit >
       is not compatible with type
         < add_observer : 'a entity_container -> 'f; .. > as 'e 
       Type (id subject, id) observer = < notify : id subject -> id -> unit >
       is not compatible with type
         'a entity_container =
           < add_entity : 'd -> 'f; notify : 'd -> id -> unit > 
       The first object type has no method add_entity
